--- a/checkpoint2.ipynb
+++ b/checkpoint2.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "149259c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pytest"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6510dc55",
    "metadata": {},
@@ -20,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2e9e04db",
    "metadata": {},
    "outputs": [
@@ -40,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "56404b36",
    "metadata": {},
    "outputs": [
@@ -48,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting test_strlen.py\n"
+      "Writing test_strlen.py\n"
      ]
     }
    ],
@@ -71,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d8a273e5",
    "metadata": {},
    "outputs": [
@@ -79,23 +69,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts =============================\u001b[0m\n",
-      "platform win32 -- Python 3.13.3, pytest-9.0.1, pluggy-1.6.0 -- C:\\Users\\DestWish\\AppData\\Local\\Programs\\Python\\Python313\\python.exe\n",
+      "\u001b]9;4;3;\u001b\\\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.11.0, pytest-9.0.1, pluggy-1.6.0 -- /Users/destwish/.pyenv/versions/3.11.0/bin/python3.11\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: c:\\Users\\DestWish\\Desktop\\колледж\\teating\n",
-      "plugins: sugar-1.1.1\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 8 items\n",
+      "rootdir: /Users/destwish/Desktop/tests/testing\n",
+      "plugins: allure-pytest-2.15.0\n",
+      "collected 4 items                                                              \u001b[0m\n",
       "\n",
-      "test_strToNewFile.py::test_strToNewFile[] \u001b[32mPASSED\u001b[0m\u001b[32m                         [ 12%]\u001b[0m\n",
-      "test_strToNewFile.py::test_strToNewFile[     ] \u001b[32mPASSED\u001b[0m\u001b[32m                    [ 25%]\u001b[0m\n",
-      "test_strToNewFile.py::test_strToNewFile[1234567890] \u001b[32mPASSED\u001b[0m\u001b[32m               [ 37%]\u001b[0m\n",
-      "test_strToNewFile.py::test_strToNewFile[12345678901234567890] \u001b[32mPASSED\u001b[0m\u001b[32m     [ 50%]\u001b[0m\n",
-      "test_strlen.py::test_strlen[-0] \u001b[32mPASSED\u001b[0m\u001b[32m                                   [ 62%]\u001b[0m\n",
-      "test_strlen.py::test_strlen[     -5] \u001b[32mPASSED\u001b[0m\u001b[32m                              [ 75%]\u001b[0m\n",
-      "test_strlen.py::test_strlen[1234567890-10] \u001b[32mPASSED\u001b[0m\u001b[32m                        [ 87%]\u001b[0m\n",
-      "test_strlen.py::test_strlen[12345678901234567890-20] \u001b[32mPASSED\u001b[0m\u001b[32m              [100%]\u001b[0m\n",
+      "test_strlen.py::test_strlen[-0] \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                                   [ 25%]\u001b[0m\n",
+      "test_strlen.py::test_strlen[     -5] \u001b]9;4;1;25\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                              [ 50%]\u001b[0m\n",
+      "test_strlen.py::test_strlen[1234567890-10] \u001b]9;4;1;50\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                        [ 75%]\u001b[0m\n",
+      "test_strlen.py::test_strlen[12345678901234567890-20] \u001b]9;4;1;75\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m              [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m8 passed\u001b[0m\u001b[32m in 0.04s\u001b[0m\u001b[32m ==============================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m4 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
      ]
     }
    ],
@@ -207,6 +193,62 @@
    "source": [
     "!pytest test_strToNewFile.py -v"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6687dd08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing test_sqlite.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test_sqlite.py\n",
+    "import pytest\n",
+    "import sqlite3\n",
+    "\n",
+    "@pytest.fixture(scope=\"module\")\n",
+    "def db():\n",
+    "    conn = sqlite3.connect(\":memory:\")\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    cursor.execute(\"\"\"\n",
+    "        CREATE TABLE users (\n",
+    "            id INTEGER PRIMARY KEY,\n",
+    "            name TEXT\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "    conn.commit()\n",
+    "\n",
+    "    yield cursor\n",
+    "\n",
+    "    cursor.execute(\"DROP TABLE users\")\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "\n",
+    "def test_insert_user():\n",
+    "    db.execute(\"INSERT INTO users (name) VALUES (?)\", (\"Alice\",))\n",
+    "    db.connection.commit()\n",
+    "\n",
+    "    db.execute(\"SELECT name FROM users WHERE name = ?\", (\"Alice\",))\n",
+    "    user = db.fetchone()\n",
+    "    assert user[0] == \"Alice\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d06d658",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -225,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
