--- a/checkpoint3.ipynb
+++ b/checkpoint3.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "db9eb6f1",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "ba97a877",
    "metadata": {},
    "outputs": [
@@ -208,14 +208,17 @@
     "    (4, 4, 4, \"Равносторонний\"),\n",
     "    (4, 3, 3, \"Равнобедренный\"),\n",
     "    (3, 3, 4, \"Равнобедренный\"),\n",
-    "    (3, 4, 5, \"Разносторонний\")])\n",
+    "    (3, 4, 5, \"Разносторонний\"),\n",
+    "    (0,0,1, \"не треугольник\"),\n",
+    "    (1,1,3, \"не треугольник\"),\n",
+    "    (2,2,4, \"не треугольник\")])\n",
     "def test_classify_triangle(a, b, c, expected):\n",
     "    assert classify_triangle(a, b, c) == expected\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "7311c5f0",
    "metadata": {},
    "outputs": [
@@ -223,20 +226,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts =============================\u001b[0m\n",
-      "platform win32 -- Python 3.13.3, pytest-9.0.1, pluggy-1.6.0 -- C:\\Users\\DestWish\\AppData\\Local\\Programs\\Python\\Python313\\python.exe\n",
+      "\u001b]9;4;3;\u001b\\\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.11.0, pytest-9.0.1, pluggy-1.6.0 -- /Users/destwish/.pyenv/versions/3.11.0/bin/python3.11\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: c:\\Users\\DestWish\\Desktop\\колледж\\teating\n",
-      "plugins: sugar-1.1.1\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 5 items\n",
+      "rootdir: /Users/destwish/Desktop/tests/testing\n",
+      "plugins: allure-pytest-2.15.0\n",
+      "collected 8 items                                                              \u001b[0m\n",
       "\n",
-      "test_classify_triangle.py::test_classify_triangle[3-3-3-\\u0420\\u0430\\u0432\\u043d\\u043e\\u0441\\u0442\\u043e\\u0440\\u043e\\u043d\\u043d\\u0438\\u0439] \u001b[32mPASSED\u001b[0m\u001b[32m [ 20%]\u001b[0m\n",
-      "test_classify_triangle.py::test_classify_triangle[4-4-4-\\u0420\\u0430\\u0432\\u043d\\u043e\\u0441\\u0442\\u043e\\u0440\\u043e\\u043d\\u043d\\u0438\\u0439] \u001b[32mPASSED\u001b[0m\u001b[32m [ 40%]\u001b[0m\n",
-      "test_classify_triangle.py::test_classify_triangle[4-3-3-\\u0420\\u0430\\u0432\\u043d\\u043e\\u0431\\u0435\\u0434\\u0440\\u0435\\u043d\\u043d\\u044b\\u0439] \u001b[32mPASSED\u001b[0m\u001b[32m [ 60%]\u001b[0m\n",
-      "test_classify_triangle.py::test_classify_triangle[3-3-4-\\u0420\\u0430\\u0432\\u043d\\u043e\\u0431\\u0435\\u0434\\u0440\\u0435\\u043d\\u043d\\u044b\\u0439] \u001b[32mPASSED\u001b[0m\u001b[32m [ 80%]\u001b[0m\n",
-      "test_classify_triangle.py::test_classify_triangle[3-4-5-\\u0420\\u0430\\u0437\\u043d\\u043e\\u0441\\u0442\\u043e\\u0440\\u043e\\u043d\\u043d\\u0438\\u0439] \u001b[32mPASSED\u001b[0m\u001b[32m [100%]\u001b[0m\n",
+      "test_classify_triangle.py::test_classify_triangle[3-3-3-\\u0420\\u0430\\u0432\\u043d\\u043e\\u0441\\u0442\\u043e\\u0440\\u043e\\u043d\\u043d\\u0438\\u0439] \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m [ 12%]\u001b[0m\n",
+      "test_classify_triangle.py::test_classify_triangle[4-4-4-\\u0420\\u0430\\u0432\\u043d\\u043e\\u0441\\u0442\\u043e\\u0440\\u043e\\u043d\\u043d\\u0438\\u0439] \u001b]9;4;1;12\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m [ 25%]\u001b[0m\n",
+      "test_classify_triangle.py::test_classify_triangle[4-3-3-\\u0420\\u0430\\u0432\\u043d\\u043e\\u0431\\u0435\\u0434\\u0440\\u0435\\u043d\\u043d\\u044b\\u0439] \u001b]9;4;1;25\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m [ 37%]\u001b[0m\n",
+      "test_classify_triangle.py::test_classify_triangle[3-3-4-\\u0420\\u0430\\u0432\\u043d\\u043e\\u0431\\u0435\\u0434\\u0440\\u0435\\u043d\\u043d\\u044b\\u0439] \u001b]9;4;1;37\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m [ 50%]\u001b[0m\n",
+      "test_classify_triangle.py::test_classify_triangle[3-4-5-\\u0420\\u0430\\u0437\\u043d\\u043e\\u0441\\u0442\\u043e\\u0440\\u043e\\u043d\\u043d\\u0438\\u0439] \u001b]9;4;1;50\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m [ 62%]\u001b[0m\n",
+      "test_classify_triangle.py::test_classify_triangle[0-0-1-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a] \u001b]9;4;2;62\u001b\\\u001b[31mFAILED\u001b[0m\u001b[31m [ 75%]\u001b[0m\n",
+      "test_classify_triangle.py::test_classify_triangle[1-1-3-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a] \u001b]9;4;2;75\u001b\\\u001b[31mFAILED\u001b[0m\u001b[31m [ 87%]\u001b[0m\n",
+      "test_classify_triangle.py::test_classify_triangle[2-2-4-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a] \u001b]9;4;2;87\u001b\\\u001b[31mFAILED\u001b[0m\u001b[31m [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m5 passed\u001b[0m\u001b[32m in 0.03s\u001b[0m\u001b[32m ==============================\u001b[0m\n"
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m_ test_classify_triangle[0-0-1-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a] _\u001b[0m\n",
+      "\n",
+      "a = 0, b = 0, c = 1, expected = 'не треугольник'\n",
+      "\n",
+      "    \u001b[0m\u001b[37m@pytest\u001b[39;49;00m.mark.parametrize(\u001b[33m\"\u001b[39;49;00m\u001b[33ma, b, c, expected\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, [\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m4\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m4\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавнобедренный\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавнобедренный\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[94m5\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРазносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m0\u001b[39;49;00m,\u001b[94m0\u001b[39;49;00m,\u001b[94m1\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m1\u001b[39;49;00m,\u001b[94m1\u001b[39;49;00m,\u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m2\u001b[39;49;00m,\u001b[94m2\u001b[39;49;00m,\u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)])\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_classify_triangle\u001b[39;49;00m(a, b, c, expected):\u001b[90m\u001b[39;49;00m\n",
+      ">       \u001b[94massert\u001b[39;49;00m classify_triangle(a, b, c) == expected\u001b[90m\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       AssertionError: assert 'Равнобедренный' == 'не треугольник'\u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[0m\u001b[91m- не треугольник\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[92m+ Равнобедренный\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtest_classify_triangle.py\u001b[0m:14: AssertionError\n",
+      "\u001b[31m\u001b[1m_ test_classify_triangle[1-1-3-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a] _\u001b[0m\n",
+      "\n",
+      "a = 1, b = 1, c = 3, expected = 'не треугольник'\n",
+      "\n",
+      "    \u001b[0m\u001b[37m@pytest\u001b[39;49;00m.mark.parametrize(\u001b[33m\"\u001b[39;49;00m\u001b[33ma, b, c, expected\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, [\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m4\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m4\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавнобедренный\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавнобедренный\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[94m5\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРазносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m0\u001b[39;49;00m,\u001b[94m0\u001b[39;49;00m,\u001b[94m1\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m1\u001b[39;49;00m,\u001b[94m1\u001b[39;49;00m,\u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m2\u001b[39;49;00m,\u001b[94m2\u001b[39;49;00m,\u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)])\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_classify_triangle\u001b[39;49;00m(a, b, c, expected):\u001b[90m\u001b[39;49;00m\n",
+      ">       \u001b[94massert\u001b[39;49;00m classify_triangle(a, b, c) == expected\u001b[90m\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       AssertionError: assert 'Равнобедренный' == 'не треугольник'\u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[0m\u001b[91m- не треугольник\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[92m+ Равнобедренный\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtest_classify_triangle.py\u001b[0m:14: AssertionError\n",
+      "\u001b[31m\u001b[1m_ test_classify_triangle[2-2-4-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a] _\u001b[0m\n",
+      "\n",
+      "a = 2, b = 2, c = 4, expected = 'не треугольник'\n",
+      "\n",
+      "    \u001b[0m\u001b[37m@pytest\u001b[39;49;00m.mark.parametrize(\u001b[33m\"\u001b[39;49;00m\u001b[33ma, b, c, expected\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, [\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m4\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m4\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавнобедренный\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРавнобедренный\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[94m5\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mРазносторонний\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m0\u001b[39;49;00m,\u001b[94m0\u001b[39;49;00m,\u001b[94m1\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m1\u001b[39;49;00m,\u001b[94m1\u001b[39;49;00m,\u001b[94m3\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m2\u001b[39;49;00m,\u001b[94m2\u001b[39;49;00m,\u001b[94m4\u001b[39;49;00m, \u001b[33m\"\u001b[39;49;00m\u001b[33mне треугольник\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)])\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_classify_triangle\u001b[39;49;00m(a, b, c, expected):\u001b[90m\u001b[39;49;00m\n",
+      ">       \u001b[94massert\u001b[39;49;00m classify_triangle(a, b, c) == expected\u001b[90m\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       AssertionError: assert 'Равнобедренный' == 'не треугольник'\u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[0m\u001b[91m- не треугольник\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\u001b[0m\n",
+      "\u001b[1m\u001b[31mE         \u001b[92m+ Равнобедренный\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtest_classify_triangle.py\u001b[0m:14: AssertionError\n",
+      "\u001b[36m\u001b[1m=========================== short test summary info ============================\u001b[0m\n",
+      "\u001b[31mFAILED\u001b[0m test_classify_triangle.py::\u001b[1mtest_classify_triangle[0-0-1-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a]\u001b[0m - AssertionError: assert 'Равнобедренный' == 'не треугольник'\n",
+      "\u001b[31mFAILED\u001b[0m test_classify_triangle.py::\u001b[1mtest_classify_triangle[1-1-3-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a]\u001b[0m - AssertionError: assert 'Равнобедренный' == 'не треугольник'\n",
+      "\u001b[31mFAILED\u001b[0m test_classify_triangle.py::\u001b[1mtest_classify_triangle[2-2-4-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a]\u001b[0m - AssertionError: assert 'Равнобедренный' == 'не треугольник'\n",
+      "\u001b[31m========================= \u001b[31m\u001b[1m3 failed\u001b[0m, \u001b[32m5 passed\u001b[0m\u001b[31m in 0.03s\u001b[0m\u001b[31m ==========================\u001b[0m\n"
      ]
     }
    ],
@@ -261,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
