--- a/checkpoint4.ipynb
+++ b/checkpoint4.ipynb
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting test_checkpoint4.py\n"
+      "Writing test_pet.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile test_checkpoint4.py\n",
+    "%%writefile test_pet.py\n",
     "import requests \n",
     "import pytest\n",
     "\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "b57cc603",
    "metadata": {},
    "outputs": [
@@ -87,46 +87,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts =============================\u001b[0m\n",
-      "platform win32 -- Python 3.13.3, pytest-9.0.1, pluggy-1.6.0 -- C:\\Users\\DestWish\\AppData\\Local\\Programs\\Python\\Python313\\python.exe\n",
+      "\u001b]9;4;3;\u001b\\\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.11.0, pytest-9.0.1, pluggy-1.6.0 -- /Users/destwish/.pyenv/versions/3.11.0/bin/python3.11\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: c:\\Users\\DestWish\\Desktop\\колледж\\teating\n",
-      "plugins: sugar-1.1.1\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 4 items\n",
+      "rootdir: /Users/destwish/Desktop/tests/testing\n",
+      "plugins: allure-pytest-2.15.0\n",
+      "collected 3 items                                                              \u001b[0m\n",
       "\n",
-      "test_checkpoint4.py::test_post_user \u001b[32mPASSED\u001b[0m\u001b[32m                               [ 25%]\u001b[0m\n",
-      "test_checkpoint4.py::test_get \u001b[32mPASSED\u001b[0m\u001b[32m                                     [ 50%]\u001b[0m\n",
-      "test_checkpoint4.py::test_put \u001b[32mPASSED\u001b[0m\u001b[32m                                     [ 75%]\u001b[0m\n",
-      "test_checkpoint4.py::test_delete \u001b[31mFAILED\u001b[0m\u001b[31m                                  [100%]\u001b[0m\n",
+      "test_pet.py::test_get_pet \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                                         [ 33%]\u001b[0m\n",
+      "test_pet.py::test_put_pet \u001b]9;4;1;33\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                                         [ 66%]\u001b[0m\n",
+      "test_pet.py::test_delete_pet \u001b]9;4;1;66\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                                      [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
       "\n",
-      "================================== FAILURES ===================================\n",
-      "\u001b[31m\u001b[1m_________________________________ test_delete _________________________________\u001b[0m\n",
-      "\n",
-      "created_user = 'MarkovOleg'\n",
-      "\n",
-      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_delete\u001b[39;49;00m(created_user):\u001b[90m\u001b[39;49;00m\n",
-      "        response = requests.delete(\u001b[33mf\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mBASE_URL\u001b[33m}\u001b[39;49;00m\u001b[33m/user/\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mcreated_user\u001b[33m}\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, headers={\u001b[33m\"\u001b[39;49;00m\u001b[33mapi_key\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m: API_KEY})\u001b[90m\u001b[39;49;00m\n",
-      "        resp_deleted = requests.get(\u001b[33mf\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mBASE_URL\u001b[33m}\u001b[39;49;00m\u001b[33m/user/\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mcreated_user\u001b[33m}\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\u001b[90m\u001b[39;49;00m\n",
-      "    \u001b[90m\u001b[39;49;00m\n",
-      ">       \u001b[94massert\u001b[39;49;00m response.status_code == \u001b[94m200\u001b[39;49;00m \u001b[95mand\u001b[39;49;00m resp_deleted.status_code == \u001b[94m404\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
-      "\u001b[1m\u001b[31mE       assert (200 == 200 and 200 == 404)\u001b[0m\n",
-      "\u001b[1m\u001b[31mE        +  where 200 = <Response [200]>.status_code\u001b[0m\n",
-      "\u001b[1m\u001b[31mE        +  and   200 = <Response [200]>.status_code\u001b[0m\n",
-      "\n",
-      "\u001b[1m\u001b[31mtest_checkpoint4.py\u001b[0m:69: AssertionError\n",
-      "\u001b[36m\u001b[1m=========================== short test summary info ===========================\u001b[0m\n",
-      "\u001b[31mFAILED\u001b[0m test_checkpoint4.py::\u001b[1mtest_delete\u001b[0m - assert (200 == 200 and 200 == 404)\n",
-      "\u001b[31m========================= \u001b[31m\u001b[1m1 failed\u001b[0m, \u001b[32m3 passed\u001b[0m\u001b[31m in 9.46s\u001b[0m\u001b[31m =========================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 7.82s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!pytest test_checkpoint4.py -v\n"
+    "!pytest test_pet.py -v\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "ecb79e54",
    "metadata": {},
    "outputs": [
@@ -134,12 +116,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting test_checkpoint4.py\n"
+      "Writing test_store.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile test_checkpoint4.py\n",
+    "%%writefile test_store.py\n",
     "import requests \n",
     "import pytest\n",
     "\n",
@@ -197,7 +179,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
+   "id": "43cd34c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b]9;4;3;\u001b\\\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.11.0, pytest-9.0.1, pluggy-1.6.0 -- /Users/destwish/.pyenv/versions/3.11.0/bin/python3.11\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/destwish/Desktop/tests/testing\n",
+      "plugins: allure-pytest-2.15.0\n",
+      "collected 4 items                                                              \u001b[0m\n",
+      "\n",
+      "test_store.py::test_get_store_inventory \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                           [ 25%]\u001b[0m\n",
+      "test_store.py::test_post_store_order \u001b]9;4;1;25\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                              [ 50%]\u001b[0m\n",
+      "test_store.py::test_get_store_order \u001b]9;4;1;50\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                               [ 75%]\u001b[0m\n",
+      "test_store.py::test_delete_store_order \u001b]9;4;1;75\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                            [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m4 passed\u001b[0m\u001b[32m in 7.21s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest test_store.py -v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "33da286d",
    "metadata": {},
    "outputs": [
@@ -205,14 +217,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting test_checkpoint4.py\n"
+      "Overwriting test_user.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile test_checkpoint4.py\n",
+    "%%writefile test_user.py\n",
     "import requests \n",
     "import pytest\n",
+    "import time\n",
     "\n",
     "API_KEY = \"special-key\"\n",
     "BASE_URL = \"https://petstore.swagger.io/v2\"\n",
@@ -277,11 +290,60 @@
     "    assert response.status_code == 200 \n",
     "def test_delete(created_user):\n",
     "    response = requests.delete(f\"{BASE_URL}/user/{created_user}\", headers={\"api_key\": API_KEY})\n",
+    "    time.sleep(25)\n",
     "    resp_deleted = requests.get(f\"{BASE_URL}/user/{created_user}\")\n",
     "    \n",
     "    assert response.status_code == 200 and resp_deleted.status_code == 404\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cf5f92e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b]9;4;3;\u001b\\\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.11.0, pytest-9.0.1, pluggy-1.6.0 -- /Users/destwish/.pyenv/versions/3.11.0/bin/python3.11\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /Users/destwish/Desktop/tests/testing\n",
+      "plugins: allure-pytest-2.15.0\n",
+      "collected 4 items                                                              \u001b[0m\n",
+      "\n",
+      "test_user.py::test_post_user \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                                      [ 25%]\u001b[0m\n",
+      "test_user.py::test_get \u001b]9;4;1;25\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                                            [ 50%]\u001b[0m\n",
+      "test_user.py::test_put \u001b]9;4;1;50\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                                            [ 75%]\u001b[0m\n",
+      "test_user.py::test_delete \u001b]9;4;2;75\u001b\\\u001b[31mFAILED\u001b[0m\u001b[31m                                         [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
+      "\n",
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m_________________________________ test_delete __________________________________\u001b[0m\n",
+      "\n",
+      "created_user = 'MarkovOleg'\n",
+      "\n",
+      "    \u001b[0m\u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_delete\u001b[39;49;00m(created_user):\u001b[90m\u001b[39;49;00m\n",
+      "        response = requests.delete(\u001b[33mf\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mBASE_URL\u001b[33m}\u001b[39;49;00m\u001b[33m/user/\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mcreated_user\u001b[33m}\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, headers={\u001b[33m\"\u001b[39;49;00m\u001b[33mapi_key\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m: API_KEY})\u001b[90m\u001b[39;49;00m\n",
+      "        time.sleep(\u001b[94m25\u001b[39;49;00m)\u001b[90m\u001b[39;49;00m\n",
+      "        resp_deleted = requests.get(\u001b[33mf\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mBASE_URL\u001b[33m}\u001b[39;49;00m\u001b[33m/user/\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mcreated_user\u001b[33m}\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[90m\u001b[39;49;00m\n",
+      ">       \u001b[94massert\u001b[39;49;00m response.status_code == \u001b[94m200\u001b[39;49;00m \u001b[95mand\u001b[39;49;00m resp_deleted.status_code == \u001b[94m404\u001b[39;49;00m\u001b[90m\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       assert (200 == 200 and 200 == 404)\u001b[0m\n",
+      "\u001b[1m\u001b[31mE        +  where 200 = <Response [200]>.status_code\u001b[0m\n",
+      "\u001b[1m\u001b[31mE        +  and   200 = <Response [200]>.status_code\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtest_user.py\u001b[0m:71: AssertionError\n",
+      "\u001b[36m\u001b[1m=========================== short test summary info ============================\u001b[0m\n",
+      "\u001b[31mFAILED\u001b[0m test_user.py::\u001b[1mtest_delete\u001b[0m - assert (200 == 200 and 200 == 404)\n",
+      "\u001b[31m========================= \u001b[31m\u001b[1m1 failed\u001b[0m, \u001b[32m3 passed\u001b[0m\u001b[31m in 38.67s\u001b[0m\u001b[31m =========================\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pytest test_user.py -v"
    ]
   }
  ],
@@ -301,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
