--- a/checkpoint3.ipynb
+++ b/checkpoint3.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ba97a877",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing test_classify_triangle.py\n"
+      "Overwriting test_classify_triangle.py\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7311c5f0",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
       "\u001b[31mFAILED\u001b[0m test_classify_triangle.py::\u001b[1mtest_classify_triangle[0-0-1-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a]\u001b[0m - AssertionError: assert 'Равнобедренный' == 'не треугольник'\n",
       "\u001b[31mFAILED\u001b[0m test_classify_triangle.py::\u001b[1mtest_classify_triangle[1-1-3-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a]\u001b[0m - AssertionError: assert 'Равнобедренный' == 'не треугольник'\n",
       "\u001b[31mFAILED\u001b[0m test_classify_triangle.py::\u001b[1mtest_classify_triangle[2-2-4-\\u043d\\u0435 \\u0442\\u0440\\u0435\\u0443\\u0433\\u043e\\u043b\\u044c\\u043d\\u0438\\u043a]\u001b[0m - AssertionError: assert 'Равнобедренный' == 'не треугольник'\n",
-      "\u001b[31m========================= \u001b[31m\u001b[1m3 failed\u001b[0m, \u001b[32m5 passed\u001b[0m\u001b[31m in 0.03s\u001b[0m\u001b[31m ==========================\u001b[0m\n"
+      "\u001b[31m========================= \u001b[31m\u001b[1m3 failed\u001b[0m, \u001b[32m5 passed\u001b[0m\u001b[31m in 0.04s\u001b[0m\u001b[31m ==========================\u001b[0m\n"
      ]
     }
    ],
