--- a/checkpoint3.ipynb
+++ b/checkpoint3.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "3948201c",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing test_is_even.py\n"
+      "Overwriting test_is_even.py\n"
      ]
     }
    ],
@@ -46,14 +46,16 @@
     "    (-2, True),\n",
     "    (-3, False),\n",
     "    (0.5, False),\n",
-    "    (4.0, True)])\n",
+    "    (4.0, True),\n",
+    "    (-4.0, True),\n",
+    "    (-0.5, False)])\n",
     "def test_is_even(number, expected):\n",
     "    assert is_even(number) == expected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "ed583df2",
    "metadata": {},
    "outputs": [
@@ -66,17 +68,19 @@
       "cachedir: .pytest_cache\n",
       "rootdir: /Users/destwish/Desktop/tests/testing\n",
       "plugins: allure-pytest-2.15.0\n",
-      "collected 7 items                                                              \u001b[0m\n",
+      "collected 9 items                                                              \u001b[0m\n",
       "\n",
-      "test_is_even.py::test_is_even[2-True] \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                             [ 14%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[3-False] \u001b]9;4;1;14\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                            [ 28%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[0-True] \u001b]9;4;1;28\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                             [ 42%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[-2-True] \u001b]9;4;1;42\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                            [ 57%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[-3-False] \u001b]9;4;1;57\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                           [ 71%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[0.5-False] \u001b]9;4;1;71\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                          [ 85%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[4.0-True] \u001b]9;4;1;85\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                           [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
+      "test_is_even.py::test_is_even[2-True] \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                             [ 11%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[3-False] \u001b]9;4;1;11\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                            [ 22%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[0-True] \u001b]9;4;1;22\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                             [ 33%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[-2-True] \u001b]9;4;1;33\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                            [ 44%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[-3-False] \u001b]9;4;1;44\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                           [ 55%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[0.5-False] \u001b]9;4;1;55\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                          [ 66%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[4.0-True] \u001b]9;4;1;66\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                           [ 77%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[-4.0-True] \u001b]9;4;1;77\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                          [ 88%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[-0.5-False] \u001b]9;4;1;88\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                         [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m7 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m9 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
      ]
     }
    ],
